--- a/blogpost.html
+++ b/blogpost.html
@@ -7,7 +7,8 @@
         <div id="container">
             <div id="post">
         <h1>Este es el titulo atractivo e interesante del post</h1>
-        <p>Y este es el parrafo de inicio donde les conatare sobre fulanito de tal donde empezo a hacer cosas maravillosas que entre equipo no pueda hacer</p>
+        <p>Y este es el parrafo de inicio donde les conatare sobre fulanito de tal donde empezo a hacer cosas maravillosas que entre equipo no pueda hacer</p> 
+        <p> Los blogs son la mejor forma de compartir indormacion y tus ideas. Mucho mas que ir a conferencia o salir en Youtube. Excepto si eres un rockstar. Pero estadisticamente no lo eres..... por ahora.</p>
         </div>
     </div>
     </body>
