--- a/blogpost.html
+++ b/blogpost.html
@@ -7,12 +7,13 @@
         <div id="container">
             <div id="cabecera">
                 Hyperblog
-                <span id="tagline">Tu blog de confianza</span>
+                <span id="tagline">Tu blog de Maestro</span>
             </div>
             <div id="post">
         <h1>Este es el titulo atractivo e interesante del post</h1>
         <p>Y este es el parrafo de inicio donde les conatare sobre fulanito de tal donde empezo a hacer cosas maravillosas que entre equipo no pueda hacer</p> 
         <p> Los blogs son la mejor forma de compartir indormacion y tus ideas. Mucho mas que ir a conferencia o salir en Youtube. Excepto si eres un rockstar. Pero estadisticamente no lo eres..... por ahora.</p>
+        <p>Suscribete y dale Like</p>
         </div>
     </div>
     </body>
