--- a/blogpost.html
+++ b/blogpost.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Bien benidos a BLOG 2.0</title>
+        <title>Bien benidos a cabecera</title>
         <link rel="stylesheet" href="css/estilo.css">
     </head>
     <body>
