Cambie el parrafo y el color de cabecera

--- a/blogpost.html
+++ b/blogpost.html
@@ -7,13 +7,13 @@
         <div id="container">
             <div id="cabecera">
                 <img id="logo" src="img/Juventus.png">
-                Hyperblog
-                <span id="tagline">Tu blog de cabecera</span>
+                Juventus
+                <span id="tagline">Llegar juntos es el principio. Mantenerse juntos, es el progreso. Trabajar juntos es el éxito.</span>
             </div>
             <div id="post">
-        <h1>Este es el titulo atractivo e interesante del post</h1>
-        <p>Y este es el parrafo de inicio donde les conatare sobre fulanito de tal donde empezo a hacer cosas maravillosas que entre equipo no pueda hacer</p> 
-        <p> Los blogs son la mejor forma de compartir indormacion y tus ideas. Mucho mas que ir a conferencia o salir en Youtube. Excepto si eres un rockstar. Pero estadisticamente no lo eres..... por ahora.</p>
+        <h1>Juventus Football Club</h1>
+        <p>La Juventus Football Club S.p.A. conocida simplemente como Juventus o Juventus de Turín, o popularmente, La Vecchia Signora o La Juve, es un club de fútbol italiano con sede en la ciudad de Turín, capital de la región del Piamonte.</p> 
+        <p>La Juventus es el equipo más exitoso de Italia y al mismo tiempo uno de los clubes más laureados y renombrados del mundo.</p>
         <p>Suscribete y dale Like</p>
         </div>
     </div>
