--- a/blogpost.html
+++ b/blogpost.html
@@ -15,6 +15,9 @@
         <p> Los blogs son la mejor forma de compartir indormacion y tus ideas. Mucho mas que ir a conferencia o salir en Youtube. Excepto si eres un rockstar. Pero estadisticamente no lo eres..... por ahora.</p>
         <p>Suscribete y dale Like</p>
         </div>
+        <div id="footer">
+            Hecho con amor en PERÚ 💟
+        </div>
     </div>
     </body>
 </html>
