--- a/blogpost.html
+++ b/blogpost.html
@@ -17,7 +17,7 @@
         <p>Suscribete y dale Like</p>
         </div>
         <div id="footer">
-            Hecho con amor en PERÚ 💟
+            Hecho con amor en PERÚ 🐧
         </div>
     </div>
     </body>
