Cambiado el parrafo final 0.1

--- a/blogpost.html
+++ b/blogpost.html
@@ -14,10 +14,10 @@
         <h1>Juventus Football Club</h1>
         <p>La Juventus Football Club S.p.A. conocida simplemente como Juventus o Juventus de Turín, o popularmente, La Vecchia Signora o La Juve, es un club de fútbol italiano con sede en la ciudad de Turín, capital de la región del Piamonte.</p> 
         <p>La Juventus es el equipo más exitoso de Italia y al mismo tiempo uno de los clubes más laureados y renombrados del mundo.</p>
-        <p>Ganas es lo que queremos, ganas de devorar todo.</p>
+        <p>Si t&uacute; sabes lo que vales, ve y consigue lo que mereces.</p>
         </div>
         <div id="footer">
-            Hecho con amor en PERÚ 🐧
+            Hecho con amor en PERÚ 🐧PAPA
         </div>
     </div>
     </body>
