agreado emojis a id footer

--- a/blogpost.html
+++ b/blogpost.html
@@ -17,7 +17,7 @@
         <p>Si t&uacute; sabes lo que vales, ve y consigue lo que mereces.</p>
         </div>
         <div id="footer">
-            Hecho con amor en PERÚ 🐧PAPA
+            Hecho con amor en PERÚ🟥⬜🟥
         </div>
     </div>
     </body>
