Agregue emojis en el proyecto

--- a/blogpost.html
+++ b/blogpost.html
@@ -8,10 +8,10 @@
             <div id="cabecera">
                 <img id="logo" src="img/Juventus.png">
                 Juventus
-                <span id="tagline">Llegar juntos es el principio. Mantenerse juntos, es el progreso. Trabajar juntos es el éxito.</span>
+                <span id="tagline">Llegar juntos es el principio. Mantenerse juntos, es el progreso. Trabajar juntos es el éxito.🖤🤍🖤</span>
             </div>
             <div id="post">
-        <h1>Juventus Football Club</h1>
+        <h1>Juventus Football Club🦓</h1>
         <p>La Juventus Football Club S.p.A. conocida simplemente como Juventus o Juventus de Turín, o popularmente, La Vecchia Signora o La Juve, es un club de fútbol italiano con sede en la ciudad de Turín, capital de la región del Piamonte.</p> 
         <p>La Juventus es el equipo más exitoso de Italia y al mismo tiempo uno de los clubes más laureados y renombrados del mundo.</p>
         <p>Si t&uacute; sabes lo que vales, ve y consigue lo que mereces.</p>
